# rusty_melody_bot

./: Cargo.toml
config/: config.toml
src/: config.rs  errors.rs  lib.rs  main.rs  storage.rs
tests/: rocksdb_init.rs
