[package]
authors = ["Vitaliy levashov <vitaliy.levashov@gmail.com>"]
description = "Guess melody telegram bot"
keywords = ["telegram", "bot", "async", "game"]
name = "rusty_melody_bot"
version = "0.1.0"

[dependencies]
telegram-bot-client = "0.2"
telegram-bot-types = "0.2"
error-chain = "0.10.0"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.0.5"
structopt-derive = "0.0.5"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-process = "0.1"
toml = "0.4"
rocksdb = "0.8"
bincode = "0.9"
rand = "0.3"

[patch.crates-io]
telegram-bot-types = { path = "../telegram-bot-types-rs" }
